tests/frontend/fail/array/bad_deref.act
contract A

constructor
interface constructor()

creates

  uint x :=  1

ensures
  x[1] == 2
